--- a/css/reset.css
+++ b/css/reset.css
@@ -27,7 +27,7 @@ footer, header, hgroup, menu, nav, section {
     display: block;
 }
 body {
-    line-height: 1.2;
+    line-height: 1.5rem;
 }
 ol, ul {
     list-style: none;
